# multi-pardigmas-programozas

./: README.md
C/: README.md
C/cmake/: CMakeLists.txt  README.md
C/cmake/tutor/: build-all.sh
C/cmake/tutor/Step1/: CMakeLists.txt  tutorial.c
C/cmake/tutor/Step2/: CMakeLists.txt  tutorial.c
C/cmake/tutor/Step2/MathFunctions/: CMakeLists.txt
C/cmake/tutor/Step3/: CMakeLists.txt
C/cmake/tutor/Step3/MathFunctions/: CMakeLists.txt
C/cmake/tutor/Step4/: CMakeLists.txt
C/cmake/tutor/Step4/MathFunctions/: CMakeLists.txt  mysqrt.c
C/cmake/tutor/Step5/: CMakeLists.txt
C/cmake/tutor/Step6/: CMakeLists.txt  tutorial.c
C/cmake/tutor/Step6/MathFunctions/: CMakeLists.txt  mysqrt.h
C/cmake/tutor/Step7/: CMakeLists.txt  License.txt
C/debugger/: README.md  source.c
C/linter/: README.md  errors.c
C/make/: README.md
C/memory_leak/: README.md  bad.c
C/vcpkg/: README.md  main.cpp  vcpkg.json
Java/: README.md
common/: README.md
js/: 00-js-development.md  01-npm.md  02-linter.md  03-prettier.md  04-husky.md
js/tutor/: bundle.js  main.js  package-lock.json  package.json
linter/: ugly.c
