cmake_minimum_required(VERSION 3.10)

# set the project name
project(Tutorial
        VERSION 1.0
        DESCRIPTION desc
        LANGUAGES C)
# add the executable
add_executable(Tutorial tutorial.c)

configure_file(TutorialConfig.h.in TutorialConfig.h)

target_include_directories(Tutorial PUBLIC
        "${PROJECT_BINARY_DIR}"
        "${PROJECT_SOURCE_DIR}/MathFunctions"
        )
